@@ -1,3 +1,8 @@
+1999-11-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* lib/Image.cpp (annotate & draw): Changed implementation to
+ 	reflect change to the way AnnotateInfo is managed by ImageMagick.
+
 1999-11-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* lib/Image.cpp (cacheThreshold): New method to set the pixel
